src/objects/Commission_Rate_Card__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is reference data table to provide commission rates based on the membership team, qualification type, and product code.

The key to the table will follow this naming convention:

Key = Team + ___ + QualificationType + ___ + ProductCode

Example: MSE___Specialty___WIFI =&gt; $60 
                PES___General Health___WIFI =&gt; $20

The key will be build into a map in the utility class CommissionUtils and will be re-used across the code bas.</description>
    <fields>
        <fullName>Inflated_Rate_Second_Stage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MSE teams also have 2 threshold to trigger inflated rate.</description>
        <label>Inflated Rate Second Stage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inflated_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Inflated rate is applied when certain closed won opportunities threshold is met for given user/opportunity owner.</description>
        <label>Inflated Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product Code should match product code on product records and it will be use to reference commission rate based on Team-QualificationType-Product Code</description>
        <label>Product Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>Qualification Type will be stored on opportunity object based upon the related contacts to the account related to the given opportunity. This field will be used to build up the mapping (in CommissionUtils class) which will determine the commission amount for each product</description>
        <label>Qualification Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Amount__c</fullName>
        <description>The rate amount related to a specific product and qualification type.</description>
        <label>Rate Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Membership team. Refer to Global PickList Membership_Team for available valid options</description>
        <label>Team</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Commission Rate Card</label>
</CustomObject>